syntax = "proto3";

option csharp_namespace = "gRPCServer.User.Protos";

service UserProtoService{
  rpc Login (LoginRequest) returns (LoginModel);
  rpc GetUserById (GetUserByIdRequest) returns (UserModel);
}

message LoginRequest{
  string username = 1;
  string password = 2;
}
message LoginModel{
  string userId = 1;
  string userRole = 2;
}
message GetUserByIdRequest{
  int32 userId = 1;
}
message UserModel{
  string userId = 1;
  string name = 2;
}